<resources>
    <string name="app_name">KYRGSupport</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="backTologin">Back to Login</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="interest">Interest</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
</resources>
