<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:src="@drawable/white_logo_transparent_background"
        app:srcCompat="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="49dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/e_mail"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="163dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="163dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEditText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/confirmPassword"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/phone"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmPasswordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/firstName"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneEditText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="250dp"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text=""
        android:hint="@string/lastName"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstNameEditText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="300dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        style="@style/AppTheme.RoundedCornerMaterialButton"/>
</android.support.constraint.ConstraintLayout>