<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="128dp"
        android:src="@drawable/white_logo_transparent_background"
        app:srcCompat="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="49dp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/e_mail"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="161dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textColor="@android:color/white"
        android:backgroundTint="#FFFFFF"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="217dp"
        app:layout_constraintTop_toTopOf="@id/emailEditText"
        app:layout_constraintLeft_toLeftOf="@id/emailEditText"
        app:layout_constraintRight_toRightOf="@id/emailEditText"
        app:layout_constraintBottom_toBottomOf="@id/emailEditText"
        android:layout_marginTop="140dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="60dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        style="@style/AppTheme.RoundedCornerMaterialButton"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="60dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        style="@style/AppTheme.RoundedCornerMaterialButton"/>

    <!--<ImageButton-->
        <!--android:id="@+id/facebookButton"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="80dp"-->
        <!--android:scaleType="fitXY"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:src="@drawable/signupwithfacebookbutton"-->
        <!--android:backgroundTint="@android:color/holo_red_dark"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--app:layout_constraintTop_toTopOf="@id/login"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"/>-->
</android.support.constraint.ConstraintLayout>